--- a/backend-gosquared/package.json
+++ b/backend-gosquared/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.3",
+    "mongoose": "^5.6.13",
     "nodemon": "^1.19.2",
     "pg": "^7.12.1",
     "sqlite3": "^4.1.0"
