--- a/frontend-gosquared/package.json
+++ b/frontend-gosquared/package.json
@@ -6,10 +6,14 @@
     "@material-ui/core": "^4.4.0",
     "axios": "^0.19.0",
     "react": "^16.9.0",
+    "react-animated-number": "^0.4.4",
+    "react-countdown-now": "^2.1.1",
     "react-dom": "^16.9.0",
+    "react-pretty-numbers": "^3.0.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-thermometer-component": "^1.0.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
